--- a/sobre.css
+++ b/sobre.css
@@ -11,15 +11,16 @@ h1{
 }
 h2{
 
-	border-width: 1px;
-  	border-style: dashed;
-  	border-color: black;
+	border-bottom: 2px solid black;
+
 }
 figure{
 	background-color: #A0A0A0;
-	border-width: 1px;
-  	border-style: solid;
-  	border-color: black;
-  	font-style: italic ;
+	border: 2px solid black;
   	text-align: center;
+  	
+}
+figcaption{
+	font-style: italic ;
+  	
 }
