Organizaçao do diretorio /img

--- a/sobre.css
+++ b/sobre.css
@@ -7,17 +7,18 @@ body{
 
 h1{
 
-	background-image:url("background.jpg");
-	color: white;
+	background-image:url("img/sobre-background.jpg");
+	color: black;
+	text-align:left;
 }
 h2{
-
+	text-align: left; 
 	border-bottom: 2px solid black;
 
 }
 figure{
-	background-color: #A0A0A0;
-	border: 2px solid black;
+	background-color: #E0E0E0;
+	
   	text-align: center;
   	
 }
@@ -26,8 +27,11 @@ figcaption{
   	
 }
 #Centro{
+	padding-top: 8px;
 	margin: auto;
-	width: 700px;
+	width: 570px;
+	height: 400px;
+
 }
 #familia{
 	float: right;
