--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 .sacola{
-	background-image: url("sacola.png");
+	background-image: url("img/sacola.png");
 	background-repeat: no-repeat;
 	background-position: top right;
 
