Implementaçao do reset.css

--- a/index.css
+++ b/index.css
@@ -1,11 +1,35 @@
+.header{
+	position: relative;
+}
+
+.menu-opcoes {
+	top: 50px;
+	position: absolute;
+	padding-top: 10px;
+	right: 0;
+}
+
 .sacola{
+
+ 	position: absolute;
+	top: 0;
+	right: 0;
+
 	background-image: url("img/sacola.png");
 	background-repeat: no-repeat;
 	background-position: top right;
 
 	font-size: 14px;
-	padding-right: 35px;
+	padding-right: 40px;
 	text-align: right;
     width: 140px;
+    padding-top: 8px;
     
 }
+
+ul li{
+
+	display: inline;
+	margin-left: 20px;
+}
+
