Organizaçao de pastas

--- a/css/Reset.css
+++ b/css/Reset.css
@@ -46,3 +46,9 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+Versões prévias
+v1.0 (200802)
+Agradecimentos
+Graças a Paul Chaplin para os blockquote/ qas regras.
+
+Arquipélago de Identidade
