--- a/css/index.css
+++ b/css/index.css
@@ -15,7 +15,7 @@
 	top: 0;
 	right: 0;
 
-	background-image: url("img/sacola.png");
+	background-image: url("../img/sacola.png");
 	background-repeat: no-repeat;
 	background-position: top right;
 
